--- a/contacto.html
+++ b/contacto.html
@@ -509,7 +509,7 @@
 
       <div class="info-block">
         <strong>NUESTRA DIRECCIÓN</strong>
-        <span>C. 29 sur 4, La Paz, 72160 Heroica Puebla de Zaragoza, Pue.</span>
+        <span>C. 29 sur 4, La Paz, 72160 Heroica Puebla de Zaragoza, Puebla.</span>
       </div>
 
       <div class="info-block">
@@ -532,12 +532,23 @@
 
 <div class="info-block">
   <strong>ESCRÍBENOS POR WHATSAPP</strong>
+
   <span>
-    <a href="https://wa.me/522227301828" target="_blank" rel="noopener">
+    <!-- <a href="https://wa.me/522227301828" target="_blank" rel="noopener">
       (222) 730 1828
     </a>
-  </span>
+  </span> -->
+
+  <a
+    href="https://wa.me/522227301828?text=Hola%20me%20gustaría%20recibir%20información%20sobre%20sus%20servicios"
+    target="_blank"
+    rel="noopener"
+    class="wa-btn"
+  >
+    💬 Enviar mensaje por WhatsApp
+  </a>
 </div>
+
 
     </div>
 
@@ -570,7 +581,7 @@
         <span>📍</span>
         <p>
           C. 29 Sur 4, La Paz, 72160<br>
-          Heroica Puebla de Zaragoza, Pue.
+          Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
@@ -597,7 +608,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p>© 2026 Constructora Zaragoza. Todos los derechos reservados.</p>
+    <p>© Constructora Zaragoza. Todos los derechos reservados.</p>
   </div>
 
 </footer>
