--- a/proyectos.html
+++ b/proyectos.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Obra Civil | Constructora Zaragoza</title>
+<title>Proyectos</title>
 <link rel="shortcut icon" href="src/img/logo/favZaragoza.png" type="image/x-icon">
 <link rel="stylesheet" href="src/css/obra.css">
 
 <style>
   .service-hero{
-  background:url("https://img.freepik.com/foto-gratis/poner-firma-contrato-hipoteca-familiar-seguro-salud-acuerdo-prestamo_1163-4196.jpg?t=st=1768593016~exp=1768596616~hmac=2252d8ae7673d11db06698911999f32c54f01ab69087c0b1ab3ed4cec7d7ab63&w=1480") center/cover no-repeat;
+  background:url("https://img.freepik.com/foto-gratis/grupo-jovenes-creativos-asia-ropa-casual-elegante-discutiendo-lluvia-ideas-negocios_7861-3066.jpg?t=st=1769069375~exp=1769072975~hmac=a91e65dff7da03d26a3004c78458bf0bf0b287a87d0e78b0ca39a82ebeb64d6a&w=1480") center/cover no-repeat;
 }
 
 </style>
@@ -19,7 +19,7 @@
 
 <!-- ================= NAVBAR ================= -->
 <!-- NAVBAR -->
-  <header class="navbar">
+<header class="navbar">
       <button class="burger" id="burgerBtn" aria-label="Abrir menú">
         <span></span>
         <span></span>
@@ -95,11 +95,12 @@
   </div>
 
 </div>
+
 <!-- ================= BANNER ================= -->
 <section class="service-hero">
   <div class="hero-overlay"></div>
-  <h1 id="heroTitle">Mantenimiento Integral</h1>
-  <span>HOME • NUESTROS SERVICIOS • <b id="heroBreadcrumb">IMANTENIMIENTO INTEGRAL</b></span>
+  <h1 id="heroTitle">PROYECTOS</h1>
+  <!-- <span>HOME • NUESTROS SERVICIOS • <b id="heroBreadcrumb">ACABADOS Y DETALLES INTERIORES</b></span> -->
 </section>
 
 <!-- ================= CONTENT ================= -->
@@ -126,36 +127,42 @@
   </aside>
 
   <!-- ===== CONTENT ===== -->
-<div class="service-content">
+  <div class="service-content">
 
   <small>[ LO QUE OFRECEMOS ]</small>
-  <h2>Contratos de Mantenimiento Adaptados a tus Necesidades</h2>
+  <h2>PROYECTOS DE INFONAVIT Y FOVISSSTE</h2>
 
   <p>
-    Ofrecemos pólizas de mantenimiento que garantizan tranquilidad y eficiencia operativa.
-    Nuestros contratos están diseñados para adaptarse a los requerimientos específicos de cada
-    proyecto, brindando soporte especializado y asesoría continua.
+    Nuestra compañía está incorporada al padrón de constructoras de Infonavit y Fovissste, para la verificación de proyectos autorizados por ellos.
+    <br><br>
+    Desde hace dos sexenios, los trabajadores mexicanos tenemos por derecho la opción de ocupar una parte los ahorros en la cuenta de Afore para remodelar o terminar de construir en nuestra vivienda.
+    <br><br>    
+    Se trata de un programa autorizado por Infonavit y Fovissste respectivamente, en donde los derechohabientes presentan un proyecto de remodelación con base a las necesidades de vivienda en su domicilio, este proyecto es evaluado por un verificador de obra (constructoras autorizadas por Infonaviy y Fovissste) para determinar el presupuesto que se debe destinar a este.
   </p>
 
-  <h3>Subservicios Incluidos</h3>
+  <!-- <h3>Subservicios Incluidos</h3>
 
-  <strong>Pólizas de Mantenimiento General</strong>
+  <strong>Carpintería</strong>
   <ul>
-    <li>Cobertura básica para garantizar el correcto funcionamiento de las instalaciones.</li>
+    <li>Ventanas, puertas, cancel, fijos, domos, escaleras.</li>
   </ul>
 
-  <strong>Pólizas Especializadas</strong>
+  <strong>Acabados Finales</strong>
   <ul>
-    <li>Servicios de mantenimiento diseñados para cubrir necesidades técnicas específicas.</li>
+    <li>Recubrimiento de muros</li>
+    <li>Recubrimiento de pisos</li>
+    <li>Recubrimiento de plafones</li>
+    <li>Acabados en fachadas</li>
+    <li>Pintura y barniz</li>
+    <li>Mamparas, paneles y prefabricados</li>
   </ul>
 
-  <strong>Asesoramiento en Gestión de Mantenimiento</strong>
+  <strong>Mobiliario Integrado</strong>
   <ul>
-    <li>Consultoría y apoyo en la administración de actividades de mantenimiento.</li>
-  </ul>
+    <li>Soluciones de mobiliario personalizadas y adaptadas a cada espacio.</li>
+  </ul> -->
 
 </div>
-
 
 
 
