--- a/obra-civil.html
+++ b/obra-civil.html
@@ -22,7 +22,7 @@
       </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/Zaragoza1.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
@@ -47,7 +47,7 @@
   </div>
 </div>
 
-      <a href="#">Proyectos</a>
+      <a href="proyectos.html">Proyectos</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -196,7 +196,7 @@
         <span>📍</span>
         <p>
           C. 29 Sur 4, La Paz, 72160<br>
-          Heroica Puebla de Zaragoza, Pue.
+          Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
@@ -223,7 +223,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p>© 2026 Constructora Zaragoza. Todos los derechos reservados.</p>
+    <p>© Constructora Zaragoza. Todos los derechos reservados.</p>
   </div>
 
 </footer>
