--- a/contacto.html
+++ b/contacto.html
@@ -459,10 +459,7 @@
     <!-- FORM -->
     <div class="contact-form">
       <form
-  name="contactoPrueba"
-  method="POST"
-  netlify
-  action="/gracias/"
+  netlify name="FormContacto" method="POST" class="theme-form-one form-validation" autocomplete="off" action="Gracias/"
 >
 
   <!-- requerido por Netlify -->
@@ -586,22 +583,14 @@
       </div>
 
       <div class="contact-item">
-  <span>✉️</span>
-  <p>
-    <a href="mailto:proyectos@constructorazaragoza.com">
-      proyectos@constructorazaragoza.com
-    </a>
-  </p>
-</div>
+        <span>✉️</span>
+        <p>proyectos@constructorazaragoza.com</p>
+      </div>
 
       <div class="contact-item">
-  <span>📞</span>
-  <p>
-    <a href="tel:+522227301828">
-      (222) 730 1828
-    </a>
-  </p>
-</div>
+        <span>📞</span>
+        <p>(222) 730 1828</p>
+      </div>
 
     </div>
 
