--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <h4> - Asistente Virtual -</h4>
           <p>Bienvenido a Constructora. Si necesitas más información sobre nuestros servicios o necesitas ayuda de un asesor para realizar cualquier trámite con tu afore, envíanos mensaje.</p>
           <div class="popup-actions">
-            <a href="#" class="email-btn">E-mail</a>
+            <a href="mailto:proyectos@constructorazaragoza.com" class="email-btn">E-mail</a>
             <a href="https://wa.me/522227301828" target="_blank" class="whatsapp-btn">WhatsApp</a>
           </div>
         </div>
