--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -192,22 +192,14 @@
       </div>
 
       <div class="contact-item">
-  <span>✉️</span>
-  <p>
-    <a href="mailto:proyectos@constructorazaragoza.com">
-      proyectos@constructorazaragoza.com
-    </a>
-  </p>
-</div>
+        <span>✉️</span>
+        <p>proyectos@constructorazaragoza.com</p>
+      </div>
 
       <div class="contact-item">
-  <span>📞</span>
-  <p>
-    <a href="tel:+522227301828">
-      (222) 730 1828
-    </a>
-  </p>
-</div>
+        <span>📞</span>
+        <p>(222) 730 1828</p>
+      </div>
 
     </div>
 
