--- a/proyectos.html
+++ b/proyectos.html
@@ -137,7 +137,7 @@
     <br><br>
     Desde hace dos sexenios, los trabajadores mexicanos tenemos por derecho la opción de ocupar una parte los ahorros en la cuenta de Afore para remodelar o terminar de construir en nuestra vivienda.
     <br><br>    
-    Se trata de un programa autorizado por Infonavit y Fovissste respectivamente, en donde los derechohabientes presentan un proyecto de remodelación con base a las necesidades de vivienda en su domicilio, este proyecto es evaluado por un verificador de obra (constructoras autorizadas por Infonaviy y Fovissste) para determinar el presupuesto que se debe destinar a este.
+    Se trata de un programa autorizado por Infonavit y Fovissste respectivamente, en donde los derechohabientes presentan un proyecto de remodelación con base a las necesidades de vivienda en su domicilio, este proyecto es evaluado por un verificador de obra (constructoras autorizadas por Infonavit y Fovissste) para determinar el presupuesto que se debe destinar a este.
   </p>
 
   <!-- <h3>Subservicios Incluidos</h3>
