--- a/contacto.html
+++ b/contacto.html
@@ -388,6 +388,7 @@
     </div>
 
     <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
     <a href="contacto.html">Contacto</a>
   </nav>
 
@@ -433,6 +434,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
@@ -526,7 +528,7 @@
   </span> -->
 
   <a
-    href="https://wa.me/522227301828?text=Hola%20me%20gustaría%20recibir%20información%20sobre%20sus%20servicios"
+    href="https://wa.me/522227301828?text=Hola%2C%20quisiera%20hacer%20un%20proyecto%20de%20remodelaci%C3%B3n%20con%20ustedes"
     target="_blank"
     rel="noopener"
     class="wa-btn"
