--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -83,6 +84,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
@@ -148,8 +150,9 @@
       Desde el diseño, hasta la ejecución, convertimos las visiones de nuestros
       clientes en realidades que cumplen sueños.
     </p>
-
-    <button class="btn-primary">VER PROYECTOS</button>
+    <a href="proyectos.html">
+      <button class="btn-primary">VER PROYECTOS</button>
+    </a>
 
   </div>
 
@@ -158,7 +161,7 @@
         <img src="src/img/logo/favZaragoza.png" alt="Perfil de María" class="profile-image">
         <div class="popup-content">
           <h4> - Asistente Virtual -</h4>
-          <p>Bienvenido a Constructora. Si necesitas más información sobre nuestros servicios o necesitas ayuda de un asesor para realizar cualquier trámite con tu afore, envíanos mensaje.</p>
+          <p>Bienvenido a Zaragoza Constructora. Si necesitas más información sobre nuestros servicios o necesitas ayuda, envíanos mensaje.</p>
           <div class="popup-actions">
             <a href="mailto:proyectos@constructorazaragoza.com" class="email-btn">E-mail</a>
             <a href="https://wa.me/522227301828" target="_blank" class="whatsapp-btn">WhatsApp</a>
@@ -274,7 +277,7 @@
   </div>
 
   <div class="cta-action">
-    <a href="#contacto" class="cta-btn">CONTÁCTANOS</a>
+    <a href="contacto.html" class="btn-primary">CONTÁCTANOS</a>
   </div>
 
 </section>
@@ -322,7 +325,7 @@
     </div>
 
     <div class="values-visual">
-      <!-- AQUÍ VA TU FIGURA -->
+      <img src="https://img.freepik.com/foto-gratis/concepto-exito-empresarial-vista-superior-mesa-madera-manos-protegiendo-figuras-madera-personas_176474-9273.jpg?t=st=1769449885~exp=1769453485~hmac=c2b109a1fb1703e8433bbe86829b7d76f6a47d00a3fbb9b6fa900f8e2f622041&w=1480" alt="">
     </div>
 
   </div>
@@ -401,7 +404,7 @@
 
     <div class="popup-actions">
       <a href="mailto:proyectos@constructorazaragoza.com" class="email-btn">E-mail</a>
-      <a href="https://wa.me/522227301828" target="_blank" class="whatsapp-btn">WhatsApp</a>
+      <a href="https://wa.me/522227301828?text=Hola%2C%20quisiera%20hacer%20un%20proyecto%20de%20remodelaci%C3%B3n%20con%20ustedes" target="_blank" class="whatsapp-btn">WhatsApp</a>
     </div>
   </div>
 
