--- a/obra-civil.html
+++ b/obra-civil.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Obra Civil | Constructora Zaragoza</title>
 <link rel="shortcut icon" href="src/img/logo/favZaragoza.png" type="image/x-icon">
+<link rel="stylesheet" href="src/css/styles.css">
 <link rel="stylesheet" href="src/css/obra.css">
 
 
@@ -48,6 +49,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -83,6 +85,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
+<a href="talento.html">Talento</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
