--- a/climatizacion.html
+++ b/climatizacion.html
@@ -53,7 +53,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -89,7 +89,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
