--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -84,7 +84,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
@@ -291,7 +291,7 @@
 
     <div class="values-text">
 
-      <small>[ NUESTROS VALORES ]</small>
+      <small>[ Principios empresariales ]</small>
 
       <h2>Nuestros Valores<br>Fundamentales</h2>
 
@@ -325,7 +325,7 @@
     </div>
 
     <div class="values-visual">
-      <img src="https://img.freepik.com/foto-gratis/concepto-exito-empresarial-vista-superior-mesa-madera-manos-protegiendo-figuras-madera-personas_176474-9273.jpg?t=st=1769449885~exp=1769453485~hmac=c2b109a1fb1703e8433bbe86829b7d76f6a47d00a3fbb9b6fa900f8e2f622041&w=1480" alt="">
+      <img src="src/img/values.jpg" alt="">
     </div>
 
   </div>
