--- a/obra-civil.html
+++ b/obra-civil.html
@@ -49,7 +49,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -85,7 +85,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
