--- a/talento.html
+++ b/talento.html
@@ -11,7 +11,7 @@
 
   <style>
     .service-hero {
-      background: url("https://img.freepik.com/foto-gratis/grupo-personas-que-elaboran-plan-negocios-oficina_1303-15872.jpg?t=st=1769450305~exp=1769453905~hmac=22cde40cc91daef5d44e3bfeab9cf57d8c918087a1f3de38bf25c0605e6cf7bf&w=1480") center/cover no-repeat;
+      background: url("src/img/banners/team.avif") center/cover no-repeat;
     }
 
     .service-content a {
@@ -70,7 +70,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-      <a href="talento.html">Talento</a>
+      <a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -107,7 +107,7 @@
 
         <a href="proyectos.html">Proyectos</a>
 
-        <a href="talento.html">Talento</a>
+        <a href="talento.html">Talento Humano</a>
         <a href="contacto.html">Contacto</a>
 
 
@@ -130,7 +130,7 @@
     <!-- ===== MENU ===== -->
    <div class="service-image-side">
   <img
-    src="https://img.freepik.com/foto-gratis/colegas-que-trabajan-juntos-proyecto_23-2149267922.jpg?t=st=1769451155~exp=1769454755~hmac=5ae57a13453a6aae93084b6b33941ba283bd08bc238ce85081cb08914d895455&w=1480"
+    src="src/img/teams.jpg"
     alt="Equipo de Constructora Zaragoza"
     loading="lazy"
   >
