--- a/contacto.html
+++ b/contacto.html
@@ -388,7 +388,7 @@
     </div>
 
     <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
     <a href="contacto.html">Contacto</a>
   </nav>
 
@@ -434,7 +434,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
