--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -54,7 +54,7 @@
 </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -90,7 +90,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-<a href="talento.html">Talento</a>
+<a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
 
     </nav>
