--- a/proyectos.html
+++ b/proyectos.html
@@ -11,7 +11,7 @@
 
   <style>
     .service-hero {
-      background: url("https://img.freepik.com/foto-gratis/grupo-jovenes-creativos-asia-ropa-casual-elegante-discutiendo-lluvia-ideas-negocios_7861-3066.jpg?t=st=1769069375~exp=1769072975~hmac=a91e65dff7da03d26a3004c78458bf0bf0b287a87d0e78b0ca39a82ebeb64d6a&w=1480") center/cover no-repeat;
+      background: url("src/img/banners/proyectos.jpg") center/cover no-repeat;
     }
   </style>
 
@@ -55,7 +55,7 @@
       </div>
 
       <a href="proyectos.html">Proyectos</a>
-      <a href="talento.html">Talento</a>
+      <a href="talento.html">Talento Humano</a>
       <a href="contacto.html">Contacto</a>
     </nav>
   </header>
@@ -91,7 +91,7 @@
         </div>
 
         <a href="proyectos.html">Proyectos</a>
-        <a href="talento.html">Talento</a>
+        <a href="talento.html">Talento Humano</a>
         <a href="contacto.html">Contacto</a>
 
       </nav>
@@ -113,7 +113,7 @@
     <!-- ===== MENU ===== -->
       <div class="service-image-side">
   <img
-    src="https://img.freepik.com/foto-gratis/primer-plano-artistas-digitales-3d-que-revisan-plan-escena-boceto-tiempos-renderizado-simulados-entusiastas-industria-creativa-cad-abierto-segundo-plano-discutiendo-problemas-tecnicos-mientras-senalan-portapapeles_482257-42943.jpg?t=st=1769451751~exp=1769455351~hmac=ad0034c4df92ae63d8744fec93b3e809d7f7de15d221cca154f89208c2f7b6cf&w=1480"
+    src="src/img/proyectos.jpg"
     alt="Equipo de Constructora Zaragoza"
     loading="lazy"
   >
