--- a/contacto.html
+++ b/contacto.html
@@ -497,15 +497,14 @@
 
       <div class="info-block">
         <strong>NUESTRA DIRECCIÓN</strong>
-        <span>C. 29 sur 4, La Paz, 72160 Heroica Puebla de Zaragoza, Puebla.</span>
+        <span>C. 29 Sur 4, La Paz, 72160, Heroica Puebla de Zaragoza, Puebla.</span>
       </div>
 
       <div class="info-block">
   <strong>NUESTRO MAILBOX</strong>
   <span>
-    <a href="mailto:proyectos@constructorazaragoza.com">
-      proyectos@constructorazaragoza.com
-    </a>
+    <a href="mailto:proyectos@constructorazaragoza.mx">
+      proyectos@constructorazaragoza.mx    </a>
   </span>
 </div>
 
@@ -568,14 +567,14 @@
       <div class="contact-item">
         <span>📍</span>
         <p>
-          C. 29 Sur 4, La Paz, 72160<br>
+          C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
       <div class="contact-item">
         <span>✉️</span>
-        <p>proyectos@constructorazaragoza.com</p>
+        <p>proyectos@constructorazaragoza.mx</p>
       </div>
 
       <div class="contact-item">
