--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/Zaragoza7.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
@@ -161,9 +161,9 @@
         <img src="src/img/logo/favZaragoza.png" alt="Perfil de María" class="profile-image">
         <div class="popup-content">
           <h4> - Asistente Virtual -</h4>
-          <p>Bienvenido a Zaragoza Constructora. Si necesitas más información sobre nuestros servicios o necesitas ayuda, envíanos mensaje.</p>
+          <p>Bienvenido a Constructora Zaragoza. Si necesitas más información sobre nuestros servicios o necesitas ayuda, envíanos mensaje.</p>
           <div class="popup-actions">
-            <a href="mailto:proyectos@constructorazaragoza.com" class="email-btn">E-mail</a>
+            <a href="mailto:proyectos@constructorazaragoza.mx" class="email-btn">E-mail</a>
             <a href="https://wa.me/522227301828" target="_blank" class="whatsapp-btn">WhatsApp</a>
           </div>
         </div>
@@ -357,14 +357,14 @@
       <div class="contact-item">
         <span>📍</span>
         <p>
-          C. 29 Sur 4, La Paz, 72160<br>
+          C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
       <div class="contact-item">
         <span>✉️</span>
-        <p>proyectos@constructorazaragoza.com</p>
+        <p>proyectos@constructorazaragoza.mx</p>
       </div>
 
       <div class="contact-item">
@@ -403,8 +403,8 @@
     </p>
 
     <div class="popup-actions">
-      <a href="mailto:proyectos@constructorazaragoza.com" class="email-btn">E-mail</a>
-      <a href="https://wa.me/522227301828?text=Hola%2C%20quisiera%20hacer%20un%20proyecto%20de%20remodelaci%C3%B3n%20con%20ustedes" target="_blank" class="whatsapp-btn">WhatsApp</a>
+      <a href="mailto:proyectos@constructorazaragoza.mx" class="email-btn">E-mail</a>
+      <a href="https://wa.me/522227301828?text=Hola%2C%20me%20gustar%C3%ADa%20m%C3%A1s%20informaci%C3%B3n%20de%20la%20constructora" target="_blank" class="whatsapp-btn">WhatsApp</a>
     </div>
   </div>
 
