--- a/obra-civil.html
+++ b/obra-civil.html
@@ -8,7 +8,16 @@
 <link rel="stylesheet" href="src/css/styles.css">
 <link rel="stylesheet" href="src/css/obra.css">
 
-
+<style>
+  p {
+      font-family: "Segoe UI", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.7;
+      color: #222;
+      margin-bottom: 20px;
+      }
+</style>
 
 </head>
 <body>
@@ -23,11 +32,10 @@
       </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/Zaragoza7.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
-
     <nav>
       <a href="index.html">Inicio</a>
       <div class="nav-dropdown">
@@ -109,7 +117,7 @@
 
    <aside class="service-menu">
 
-  <a href="obra-civil.html" class="active">01. OBRA CIVIL Y ESTRUCTURA</a>
+  <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
@@ -198,14 +206,14 @@
       <div class="contact-item">
         <span>📍</span>
         <p>
-          C. 29 Sur 4, La Paz, 72160<br>
+          C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
       <div class="contact-item">
         <span>✉️</span>
-        <p>proyectos@constructorazaragoza.com</p>
+        <p>proyectos@constructorazaragoza.mx</p>
       </div>
 
       <div class="contact-item">
