--- a/talento.html
+++ b/talento.html
@@ -44,11 +44,10 @@
     </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/Zaragoza7.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
-
     <nav>
       <a href="index.html">Inicio</a>
       <div class="nav-dropdown">
@@ -162,7 +161,7 @@
       <p>
         Crece con nosotros en un entorno donde el trabajo en equipo, el aprendizaje y la pasión por lo que hacemos marcan la diferencia.
         <br><br>
-         <a href="mailto:proyectos@constructorazaragoza.com">
+         <a href="mailto:proyectos@constructorazaragoza.mx">
       Envianos tu CV
     </a>
       </p>
@@ -228,7 +227,7 @@
 
         <div class="contact-item">
           <span>✉️</span>
-          <p>proyectos@constructorazaragoza.com</p>
+          <p>proyectos@constructorazaragoza.mx</p>
         </div>
 
         <div class="contact-item">
