--- a/infraestructura.html
+++ b/infraestructura.html
@@ -13,6 +13,15 @@
   background:url("https://img.freepik.com/foto-gratis/pasarela-paredes-cristal_1127-2246.jpg?t=st=1768592731~exp=1768596331~hmac=f1431f5f47fba55ac9fd2fc0c7a3b95cb1f7875ec62b471399757e1a4c718db3&w=1480https://img.freepik.com/foto-gratis/pasarela-paredes-cristal_1127-2246.jpg?t=st=1768592731~exp=1768596331~hmac=f1431f5f47fba55ac9fd2fc0c7a3b95cb1f7875ec62b471399757e1a4c718db3&w=1480") center/cover no-repeat;
 }
 
+p {
+      font-family: "Segoe UI", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.7;
+      color: #222;
+      margin-bottom: 20px;
+      }
+
 </style>
 
 </head>
@@ -28,11 +37,10 @@
       </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/Zaragoza7.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
-
     <nav>
       <a href="index.html">Inicio</a>
       <div class="nav-dropdown">
@@ -114,7 +122,7 @@
 
    <aside class="service-menu">
 
-  <a href="obra-civil.html" class="active">01. OBRA CIVIL Y ESTRUCTURA</a>
+  <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
@@ -194,14 +202,14 @@
       <div class="contact-item">
         <span>📍</span>
         <p>
-          C. 29 Sur 4, La Paz, 72160<br>
+          C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
       <div class="contact-item">
         <span>✉️</span>
-        <p>proyectos@constructorazaragoza.com</p>
+        <p>proyectos@constructorazaragoza.mx</p>
       </div>
 
       <div class="contact-item">
