--- a/polizas.html
+++ b/polizas.html
@@ -10,8 +10,17 @@
 
 <style>
   .service-hero{
-  background:url("https://img.freepik.com/foto-gratis/poner-firma-contrato-hipoteca-familiar-seguro-salud-acuerdo-prestamo_1163-4196.jpg?t=st=1768593016~exp=1768596616~hmac=2252d8ae7673d11db06698911999f32c54f01ab69087c0b1ab3ed4cec7d7ab63&w=1480") center/cover no-repeat;
+  background:url("src/img/banners/contrato.avif") center/cover no-repeat;
 }
+
+p {
+      font-family: "Segoe UI", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.7;
+      color: #222;
+      margin-bottom: 20px;
+      }
 
 </style>
 
@@ -28,11 +37,10 @@
       </button>
     <div class="logo">
       <div class="brand-logo">
-        <a href="index.html"><img src="src/img/logo/favZaragoza.png" alt="Constructora Zaragoza"></a>
+        <a href="index.html"><img src="src/img/logo/Zaragoza7.png" alt="Constructora Zaragoza"></a>
       </div>
       <span>CONSTRUCTORA<br><b>ZARAGOZA</b></span>
     </div>
-
     <nav>
       <a href="index.html">Inicio</a>
       <div class="nav-dropdown">
@@ -113,7 +121,7 @@
 
    <aside class="service-menu">
 
-  <a href="obra-civil.html" class="active">01. OBRA CIVIL Y ESTRUCTURA</a>
+  <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
@@ -188,14 +196,14 @@
       <div class="contact-item">
         <span>📍</span>
         <p>
-          C. 29 Sur 4, La Paz, 72160<br>
+          C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
       </div>
 
       <div class="contact-item">
         <span>✉️</span>
-        <p>proyectos@constructorazaragoza.com</p>
+        <p>proyectos@constructorazaragoza.mx</p>
       </div>
 
       <div class="contact-item">
